fix candy package

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<properties>
 		<jsweet.transpiler.version>3.0.0-SNAPSHOT</jsweet.transpiler.version>
-		<jsweet.core.version>6.2.0</jsweet.core.version>
+		<jsweet.core.version>6.0.0-SNAPSHOT</jsweet.core.version>
 		<java.version.release>11</java.version.release>
 		<java.version>1.${java.version.release}</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -165,7 +165,7 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jsweet</groupId>
+			<groupId>org.jsweet.v3</groupId>
 			<artifactId>jsweet-core</artifactId>
 			<version>${jsweet.core.version}</version>
 			<scope>compile</scope>
