--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.jsweet</groupId>
+	<groupId>org.jsweet.v3</groupId>
 	<artifactId>j4ts-java-sources</artifactId>
 	<version>0.7.0-SNAPSHOT</version>
 
 	<properties>
-		<jsweet.transpiler.version>3.0.0-RC4</jsweet.transpiler.version>
+		<jsweet.transpiler.version>3.0.0-SNAPSHOT</jsweet.transpiler.version>
 		<jsweet.core.version>6.0.0</jsweet.core.version>
 		<java.version.release>11</java.version.release>
 		<java.version>1.${java.version.release}</java.version>
@@ -66,7 +66,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.jsweet</groupId>
+				<groupId>org.jsweet.v3</groupId>
 				<artifactId>jsweet-maven-plugin</artifactId>
 				<version>${jsweet.transpiler.version}</version>
 				<configuration>
@@ -159,7 +159,7 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jsweet</groupId>
+			<groupId>org.jsweet.v3</groupId>
 			<artifactId>jsweet-transpiler</artifactId>
 			<version>${jsweet.transpiler.version}</version>
 			<scope>compile</scope>
