--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
 								<pluginExecution>
 									<pluginExecutionFilter>
 										<groupId>
-											org.jsweet
+											org.jsweet.v3
 										</groupId>
 										<artifactId>
 											jsweet-maven-plugin
