--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.jsweet.v3</groupId>
+	<groupId>org.jsweet</groupId>
 	<artifactId>j4ts-java-sources</artifactId>
 	<version>1.0.0</version>
 
@@ -66,7 +66,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.jsweet.v3</groupId>
+				<groupId>org.jsweet</groupId>
 				<artifactId>jsweet-maven-plugin</artifactId>
 				<version>${jsweet.transpiler.version}</version>
 				<configuration>
@@ -159,13 +159,13 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jsweet.v3</groupId>
+			<groupId>org.jsweet</groupId>
 			<artifactId>jsweet-transpiler</artifactId>
 			<version>${jsweet.transpiler.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jsweet.v3</groupId>
+			<groupId>org.jsweet</groupId>
 			<artifactId>jsweet-core</artifactId>
 			<version>${jsweet.core.version}</version>
 			<scope>compile</scope>
