--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0.0</version>
 
 	<properties>
-		<jsweet.transpiler.version>3.0.0</jsweet.transpiler.version>
+		<jsweet.transpiler.version>3.1.0-SNAPSHOT</jsweet.transpiler.version>
 		<jsweet.core.version>6.3.0</jsweet.core.version>
 		<java.version.release>11</java.version.release>
 		<java.version>1.${java.version.release}</java.version>
